--- a/ide/ide-preview/src/main/resources/ide-preview/preview.html
+++ b/ide/ide-preview/src/main/resources/ide-preview/preview.html
@@ -20,9 +20,11 @@
 </head>
 
 <body ng-app="preview" ng-controller="PreviewController">
-	<div class="form-group">
-		 <label for="previewUrl">URL:</label>
-		<input class="form-control" type="text" ng-model="previewUrl" id="previewUrl">
+	<div class="input-group">
+		<span class="input-group-btn">
+			<button class="btn btn-default" type="button" ng-click="refresh()"><i class="fa fa-refresh"></i></button>
+		</span>
+		<input type="text" class="form-control" type="text" ng-model="previewUrl" placeholder="Preview ..." >
 	</div>
 	<div class="fluidMedia">
 	    <iframe ng-src="{{previewUrl}}" frameborder="0"> </iframe>
