--- a/ide/ide-database/src/main/resources/ide-database/index.html
+++ b/ide/ide-database/src/main/resources/ide-database/index.html
@@ -7,7 +7,7 @@
 
     <title>Eclipse Dirigible &trade; | Database </title>
 
-	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/png" href="../ide/img/favicon.png" />
 	
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
