--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Eclipse Dirigible &trade;</title>
+    <title>Eclipse Dirigible &trade; | Workbench </title>
 
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 	
