fixed create node load

--- a/ide/ide-preview/src/main/resources/ide-preview/preview.html
+++ b/ide/ide-preview/src/main/resources/ide-preview/preview.html
@@ -19,7 +19,7 @@
 	<link href="css/fluid-media.css" type="text/css" rel="stylesheet" />
 </head>
 
-<body ng-app="preview" ng-controller="PreviewController as preview">
+<body ng-app="preview" ng-controller="PreviewController as preview" id="preview">
 	<div class="input-group">
 		<span class="input-group-btn">
 			<button class="btn btn-default" type="button" ng-click="preview.refresh()"><i class="fa fa-refresh"></i></button>
