--- a/ide/ide-core/src/main/resources/ide/properties.html
+++ b/ide/ide-core/src/main/resources/ide/properties.html
@@ -8,19 +8,16 @@
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 	
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	
+	<!-- jQuery -->
+	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
 	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 	<script src="/services/v3/web/resources//bootstrap/3.3.7/bootstrap.min.js"></script>
 	
-	<!-- GoldenLayout with Theme Support -->
-	<script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.js"></script>
-	
-	<link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
-	<link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
-	
-	<link type="text/css" rel="stylesheet" href="css/dark.css" />
+	<!-- Custom IDE Styles -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	
 	<script src="ui/message-hub.js"></script>
 	
