--- a/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
+++ b/ide/ide-database/src/main/resources/ide-database/explorer/explorer.html
@@ -6,25 +6,31 @@
 	<title>Eclipse Dirigible - Database</title>
 	
 	<script src="../../ide/ui/message-hub.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.min.js"></script>
 	
-	<link href="../../ide/css/jstree.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.min.js"></script>
+	<!-- jQuery -->
+	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
-	<link rel="stylesheet" href="../../ide/css/bootstrap.min.css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<!-- AngularJS -->
+	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	
+	<!-- Twitter Bootstrap with Theme Support -->
+	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	
+	<link href="/services/v3/core/theme/jstree.css" rel="stylesheet">
+	<script src="/services/v3/web/resources/jstree/3.3.4/jstree.min.js"></script>
+	
+	<!-- Custom IDE Styles -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	
 	<script src="explorer.js"></script>
-	
-	<link type="text/css" rel="stylesheet" href="../../ide/css/dark.css" />
 
 </head>
 
-<body style="background-color: #222" border="1px" ng-app="database" ng-controller="DatabaseController">
+<body border="1px" ng-app="database" ng-controller="DatabaseController">
 
 	<div>
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
