--- a/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -6,27 +6,33 @@
 	<title>Eclipse Dirigible - Workspace</title>
 	
 	<script src="../ide/ui/message-hub.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-resource.min.js"></script>
 	
-	<link href="css/jstree.css" rel="stylesheet">
-	<!--link href="css/jstree.min.css" rel="stylesheet"-->
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+
+	<!-- jQuery -->
+	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
-	<!--script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.js"></script-->
-	<script src="js/jstree.js"></script>
+	<!-- AngularJS -->
+	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+
+	<!-- jsTree -->
+	<link href="/services/v3/core/theme/jstree.css" rel="stylesheet">
+	<script src="/services/v3/web/resources/jstree/3.3.4/jstree.js"></script>
 	
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<!-- Twitter Bootstrap with Theme Support -->
+	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	
+	<!-- Custom IDE Styles -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	
 	<script src="workspace.js"></script>
-	
-	<link type="text/css" rel="stylesheet" href="/services/v3/web/ide/css/dark.css" />
 
 </head>
 
-<body style="background-color: #222" border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
+<body border="1px" ng-app="workspace" ng-controller="WorkspaceController as workspace">
 
 	<div>
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
