layout resizing fixes

--- a/ide/ide-core/src/main/resources/ide/index.html
+++ b/ide/ide-core/src/main/resources/ide/index.html
@@ -89,6 +89,7 @@
 		</div>
 		<div class="plane"></div>
 	</div>
+	<div class="statusbar"></div>
 	
 	<!-- AngularJS -->
 	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
