data structure synchronizer finalization

--- a/ide/ide-database/src/main/resources/ide-database/index.html
+++ b/ide/ide-database/src/main/resources/ide-database/index.html
@@ -152,7 +152,7 @@
 				this.setContent(componentState.path);
 			});
 			this.layout.registerComponent( 'Result', function( container, componentState ){
-				container.getElement().html( '<iframe src="result.html"></iframe>' );
+				container.getElement().html( '<iframe src="sql/result.html"></iframe>' );
 			});
 			this.layout.registerComponent( 'Console', function( container, componentState ){
 				container.getElement().html( '<iframe src="../ide-console/console.html"></iframe>' );
