--- a/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
+++ b/ide/ide-workspace/src/main/resources/ide-workspace/workspace.html
@@ -38,24 +38,12 @@
 		<div class="btn-group pull-right" role="group" aria-label="toolbar">
 			<div class="btn-group">
 			  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="New">
-			    <i class="fa fa-file-o"></i>
+			    <i class="fa fa-plus"></i>
 			  </button>
 			  <div class="dropdown-menu">
-				  <a class="dropdown-item" href="#">Workspace</a>
+				  <a class="dropdown-item" href="#" ng-click="workspace.createWorkspace()">Workspace</a>
 				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">Project</a>
-				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">Folder</a>
-				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">File</a>
-				  <div class="dropdown-divider"><hr></div>
-				  <a class="dropdown-item" href="#">Table</a>
-				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">View</a>
-				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">JavaScript</a>
-				  <div class="dropdown-divider"></div>
-				  <a class="dropdown-item" href="#">HTML</a>
+				  <a class="dropdown-item" href="#" ng-click="workspace.createProject()">Project</a>
 				  <div class="dropdown-divider"></div>
 			  </div>
 			</div>
