--- a/ide/ide-preview/src/main/resources/ide-preview/preview.html
+++ b/ide/ide-preview/src/main/resources/ide-preview/preview.html
@@ -5,18 +5,26 @@
 	
 	<title>Eclipse Dirigible - Preview</title>
 
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+	
+	<!-- AngularJS -->
 	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
 	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	
+	<!-- jQuery -->
+	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	
+	<!-- Twitter Bootstrap with Theme Support -->
 	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
 	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	
 	<script src="../ide/ui/message-hub.js"></script>
 	<script src="preview.js"></script>
 
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
-
-	<link href="../ide/css/dark.css" type="text/css" rel="stylesheet" />
+	<!-- Custom IDE Styles -->
+	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
 	<link href="css/fluid-media.css" type="text/css" rel="stylesheet" />
+	
 </head>
 
 <body ng-app="preview" ng-controller="PreviewController as preview" class="view">
