--- a/ide/ide-database/src/main/resources/ide-database/sql/result.html
+++ b/ide/ide-database/src/main/resources/ide-database/sql/result.html
@@ -45,7 +45,7 @@
         <table class="table table-striped" ng-show="columns">
                 <thead>
                   <tr>
-                    <th ng-repeat="colum in columns">{{colum}}</th>
+                    <th ng-repeat="column in columns">{{column}}</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -59,12 +59,23 @@
     angular.module('database-table').controller('DatabaseTableController', function ($scope, $http) {
 
     var messageHub = new FramesMessageHub();
+    
+    $scope.database = "derby";
+    $scope.datasource = "DefaultDB";
+    
+    messageHub.subscribe(function(evt){
+    		$scope.database = evt.data;
+        }, "database.database.selection.changed");
+    messageHub.subscribe(function(evt){
+			$scope.datasource = evt.data;
+	    }, "database.datasource.selection.changed");
 
     messageHub.subscribe(function(command){
+    		var url = "/services/v3/ide/databases/" + $scope.database + "/" + $scope.datasource;
             if (command.data.toLowerCase().startsWith('select')) {
                 $http({
                     method: 'POST',
-                    url: "/services/v3/ide/databases/derby/DefaultDB/query",
+                    url: url + "/query",
                     data: command.data,
                     headers: {'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8'}
                 }).success(function(rows) {
@@ -81,7 +92,7 @@
             } else {
                 $http({
                     method: 'POST',
-                    url: "/services/v3/ide/databases/derby/DefaultDB/update",
+                    url: url + "/update",
                     data: command.data,
                     headers: {'Content-Type': 'application/x-www-form-urlencoded; charset=UTF-8', 'Accept': 'text/plain'}
                 }).success(function(result) {
