--- a/ide/ide-core/src/main/resources/ide/welcome.html
+++ b/ide/ide-core/src/main/resources/ide/welcome.html
@@ -39,5 +39,6 @@
 	<p style="font-size: 2em" align=center><img src="img/dirigible-flag.png" /></p>
 	<p style="font-size: 1.4em" align=center>Enjoy Programming Like Never Before</p></div>
 	<br>
+	<script src="/services/v3/web/resources/themes/theme.js"></script>	
   </body>
  </html>
